--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.2
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   flutter_screenutil: ^5.5.3+2
   flutter_svg: ^2.0.9
   google_fonts: ^6.1.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_lints: ^3.0.1
